<resources>
    <string name="app_name">医疗辅助</string>

    <string name="str_login">登录</string>
    <string name="str_register">注册</string>
    <string name="hospital_performance_auxiliary_sys">医院绩效考核辅助系统</string>
    <string name="str_forget_password">忘记密码？</string>
    <string name="str_nul">暂无</string>
    <string name="str_add">新增</string>
    <string name="str_more">更多</string>
    <string name="str_next_step">下一步</string>
    <string name="str_finish">完成</string>

    <string name="str_title_modify_pwd">修改密码</string>
    <string name="str_pwd_old">旧密码：</string>
    <string name="str_pwd_new">新密码：</string>
    <string name="str_pwd_confirm">确认密码：</string>
    <string name="str_pwd_hint_old">请输入旧密码</string>
    <string name="str_pwd_hint_new">请输入新密码</string>
    <string name="str_pwd_hint_confirm">请再次输入新密码</string>
    <string name="str_pwd_hint">注：新密码需为6-20位字母或数字</string>
    <string name="str_save">保存</string>

    <string name="tips_default_loading">正在加载，请稍后...</string>
    <string name="tips_is_committing">正在提交,请稍后...</string>
    <string name="home">首页</string>
    <string name="knowledge">知识</string>
    <string name="mission">任务</string>
    <string name="mine">我的</string>
    <string name="str_certified">已认证</string>
    <string name="str_uncertified">未认证</string>
    <string name="str_consult">专家咨询</string>
    <string name="str_consult_service">咨询服务</string>
    <string name="str_my_feedback">问题反馈</string>
    <string name="str_about">关于我们</string>
    <string name="str_setting">设置</string>
    <string name="str_search">搜索</string>
    <string name="index_monitor">指标监控</string>
    <string name="warning_index">警戒指标</string>
    <string name="str_index">%d / %d</string>
    <string name="country_newsletter">国考快讯</string>
    <string name="performance_forum">绩效论坛</string>
    <string name="detail">详情</string>
    <string name="country_policy">国家政策</string>
    <string name="inner_news">业内新闻</string>
    <string name="healthy_info">健康咨询</string>
    <string name="tips_consult_service_1">享受专家远程咨询服务</string>
    <string name="tips_consult_service_2">您已开通“国家绩效考核咨询 VIP服务”</string>
    <string name="total_times">总次数</string>
    <string name="used_times">已使用次数</string>
    <string name="left_times">剩余次数</string>
    <string name="start_now">立即开始</string>
    <string name="vip_service">VIP服务</string>
    <string name="service_history">服务历史</string>
    <string name="service_history_detail">服务历史详情</string>
    <string name="vip_service_tips">享受每年4次的远程专家指导，快速响应，不用排队，以及1次现场指导。</string>
    <string name="hint_search_history">请输入要搜索专家名称</string>
    <string name="my_message">我的消息</string>
    <string name="send">发送</string>
    <string name="hint_comment">写评论(最多500字)</string>
    <string name="form_subject">填报项</string>
    <string name="value">值</string>
    <string name="warning_value">警戒值</string>
    <string name="suggestion_for_improvement">改进建议</string>
    <string name="hint_feedback">请在此处填写您对我们产品与服务的建议，以便我们改进。</string>
    <string name="identification_info">认证信息</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="hospital_name">医院名称</string>
    <string name="department">科室</string>
    <string name="office">职务</string>
    <string name="department_telephone">单位电话</string>
    <string name="province_city">省市</string>
    <string name="related_documents">相关证件（可以是工作证或胸牌）</string>
    <string name="re_get_code_timer">%d秒可后重新获取</string>
    <string name="re_get_code">重新获取</string>
    <string name="improving_info">完善信息</string>

</resources>
