<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/NoEdgeRecycleView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen_10dp">

        <com.hnhy.ylfz.mvp.ui.widget.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/dimen_10dp" />
        <com.hnhy.ylfz.mvp.ui.widget.ViewCounterTips
            android:layout_marginTop="@dimen/dimen_5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            style="@style/StyleDivider.Light"
            android:layout_marginTop="@dimen/dimen_10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/StyleCommonText"
                android:text="@string/index_monitor"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold" />

            <com.hnhy.ylfz.mvp.ui.widget.LooperTextView
                android:id="@+id/tv_monitor_tips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen_20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_index_monitor"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@drawable/shape_oval_10dp"
            android:backgroundTint="#FEE9E8"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_index_name"
                style="@style/StyleCommonText"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:text="@string/warning_index"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/pb_index"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_weight="1"
                android:max="100"
                android:progress="50" />

            <TextView
                android:id="@+id/tv_index_percent"
                style="@style/StyleCommonText"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:text="@string/str_index"
                android:textSize="18sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/StyleCommonText"
                android:text="@string/country_newsletter"
                android:textSize="@dimen/large_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_more"
                style="@style/StyleCommonText"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/str_more"
                android:textSize="@dimen/large_text_size"
                android:textColor="@color/colorPrimary"/>
        </RelativeLayout>

        <View
            style="@style/StyleDivider.Light"
            android:layout_marginTop="@dimen/dimen_10dp" />

        <LinearLayout
            android:id="@+id/ll_country_newsletter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>